mailhog/mailhog-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mailhog
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - image: mailhog/mailhog
          name: mailhog
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /maildir
              name:      mailhog-maildir
          command: ["MailHog", "-storage=maildir", "-maildir-path=/maildir"]
      volumes:
        - name: mailhog-maildir
          persistentVolumeClaim: { claimName: mailhog-maildir }
